src/sample_yaml/Deployment-SidecarContainer.yaml
# https://medium.com/itnext/the-kubernetes-troubleshooting-handbook-7596a1fdf2ff
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-netshoot
    labels:
        app: nginx-netshoot
spec:
replicas: 1
selector:
    matchLabels:
        app: nginx-netshoot
template:
    metadata:
    labels:
        app: nginx-netshoot
    spec:
        containers:
        - name: nginx
        image: nginx:1.14.2
        ports:
            - containerPort: 80
        - name: netshoot
        image: nicolaka/netshoot
        command: ["/bin/bash"]
        args: ["-c", "while true; do ping localhost; sleep 60;done"]
