src/sample_yaml/Pod-with-initContainer.yaml
# https://blog.devgenius.io/5-secret-kubernetes-tricks-you-didnt-know-6d930dfdfffa
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  containers:
  - name: app-container
    image: my-app-image
    volumeMounts:
    - name: migration-scripts
      mountPath: /app/scripts
  volumes:
  - name: migration-scripts
    emptyDir: {}
