src/sample_yaml/Pod.yaml
# https://medium.com/@obaff/14-kubernetes-yaml-files-youll-use-regularly-b3b81107d294
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: nginx:latest
      ports:
        - containerPort: 80
