src/sample_yaml/Service-ClusterIP.yaml
# https://medium.com/@obaff/14-kubernetes-yaml-files-youll-use-regularly-b3b81107d294
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
