src/sample_yaml/Ingress.yaml
# https://medium.com/@obaff/14-kubernetes-yaml-files-youll-use-regularly-b3b81107d294
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
