src/sample_yaml/NetworkPolicy-allow-all.yaml
# https://medium.com/faun/mastering-kubernetes-networking-types-setup-and-best-practices-4274ed2cba94
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
